<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aiden.xtapp.ui.MyActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@mipmap/tittlebar_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="我"
                android:textColor="@color/color_white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView401"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/tittlebar_back_icon" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="56dp"
            android:padding="20dp"
            android:background="@color/color_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="您的帐号"
                android:gravity="center"
                android:padding="@dimen/dimen_5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="13051382737"
                android:gravity="center"
                android:textColor="@color/color_blue"
                android:padding="@dimen/dimen_5dp"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_my_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home_black_24dp"
            android:text="@string/title_home" />
        <Button
            android:id="@+id/button_my_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_explore_black_24dp"
            android:text="@string/title_dashboard" />
        <Button
            android:id="@+id/button_my_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_person_black_24dp"
            android:text="@string/title_notifications" />
    </LinearLayout>

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:menu="@menu/navigation" />-->

</LinearLayout>
